# chess-game

./: CMakeLists.txt  LICENSE  main.cpp
include/: helpers.h  moves.h
machine_learning/: export_bin.py  main.py
src/: moves.cpp
